task#经期管理安卓添加失败的问题

--- a/H5部署说明.md
+++ b/H5部署说明.md
@@ -4,9 +4,11 @@
 
 ### 1. 准备文件
 
-确保 `website/` 目录包含以下文件：
-- `intro.html` - 功能说明页
-- `detail.html` - 详情页
+主站为 React SPA（`index.html`）。经期管理 H5 为 SPA 内路由：
+- 介绍页：`/habit/period/intro`
+- 主功能页：`/habit/period`
+- 首次初始化：`/habit/period/onboarding`
+- 另需：`privacy.html`、`terms.html`（独立入口）
 
 ### 2. 部署到Netlify
 
@@ -41,10 +43,10 @@ if (TextUtils.isEmpty(h5BaseUrl)) {
 
 ### 4. 测试
 
-1. 编译并运行App
-2. 进入习惯库
-3. 点击"大姨妈管理"
-4. 查看是否正确加载H5页面
+1. 编译并运行 App
+2. 进入习惯库，点击「大姨妈管理」
+3. 应先进入介绍页（或直接进主功能页），主功能为经期日历与记录
+4. 确认页面来自 `https://tinyhabits.top/habit/period` 或 `/habit/period/intro`
 
 ## 本地测试
 
